--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,51 @@
-*~
-__pycache__
+# Sensitive Files - NEVER COMMIT
 .env
+.env.local
+*.key
+*.pem
+secrets*.yaml
+credentials*.json
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+.pytest_cache/
+.venv/
+venv/
+ENV/
+env/
+
+# IDE & Editors
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
+*.sublime-project
+*.sublime-workspace
+
+# Logs & Session Files
+*.log
+debug-session.json
+/tmp/
+.runelite/
