--- a/routines/skilling/cooking_lumbridge.yaml
+++ b/routines/skilling/cooking_lumbridge.yaml
@@ -1,6 +1,6 @@
 # Cooking Routine - Lumbridge Castle Range
 # Cooks raw fish at the Lumbridge Castle kitchen range
-# UPDATED: 2025-01-11 - Uses Bottom-floor/Top-floor to skip middle floor
+# UPDATED: 2026-01-17 - Added CAMERA_STABILIZE, optimized navigation
 # CRITICAL: Use SOUTHERN staircase only! Northern leads to complex indoor navigation.
 
 name: "Cooking at Lumbridge Range"
@@ -8,17 +8,23 @@ description: "Cook raw fish at Lumbridge Castle range, banking on top floor"
 type: "skilling"
 skill: "cooking"
 
-# Configuration - change these for different foods
+# ============================================================
+# CONFIGURATION - Change these for different fish types
+# ============================================================
+# For TUNA:     raw_food: "Raw tuna"      cooked_food: "Tuna"
+# For SWORDFISH: raw_food: "Raw swordfish" cooked_food: "Swordfish"
+# For LOBSTER:   raw_food: "Raw lobster"   cooked_food: "Lobster"
+# ============================================================
 config:
-  raw_food: "Raw lobster"        # What to withdraw (use spaces for items)
-  cooked_food: "Lobster"         # Expected cooked result
-  quantity: 28                   # Full inventory (was 27)
+  raw_food: "Raw swordfish"      # What to withdraw (use spaces for items)
+  cooked_food: "Swordfish"       # Expected cooked result
+  quantity: 28                   # Full inventory
 
 requirements:
   items:
-    - name: "Raw lobster"
+    - name: "Raw tuna"
       quantity: 28
-      note: "Or Raw shrimps, Raw anchovies, etc."
+      note: "Or Raw swordfish, Raw lobster, etc."
   locations:
     - name: "Lumbridge Castle"
       note: "Bank on plane 2, Range on plane 0"
@@ -56,20 +62,23 @@ steps:
     phase: "banking"
     action: BANK_OPEN
     description: "Open bank interface"
+    delay_after_ms: 1500
     notes: "Must be near banker NPC on plane 2"
 
   - id: 2
     phase: "banking"
     action: BANK_WITHDRAW
-    args: "Raw lobster 28"
-    description: "Withdraw raw fish to cook"
-    await_condition: "has_item:Raw lobster"
-    notes: "Item names use SPACES: 'Raw lobster' not 'Raw_lobster'"
+    args: "${raw_food|underscore} ${quantity}"
+    description: "Withdraw ${raw_food} to cook"
+    await_condition: "has_item:${raw_food}"
+    timeout_ms: 10000
+    notes: "Uses config variables - change raw_food in config section to switch fish type"
 
   - id: 3
     phase: "banking"
     action: BANK_CLOSE
     description: "Close bank interface"
+    delay_after_ms: 500
 
   # ========== PHASE 2: NAVIGATE DOWN (BOTTOM-FLOOR SKIPS MIDDLE) ==========
   - id: 4
@@ -102,40 +111,54 @@ steps:
 
   - id: 7
     phase: "cooking"
-    action: INTERACT_OBJECT
-    args: "Range Cook"
-    description: "Click on Range to open cooking interface"
-    delay_after_ms: 2000
-    notes: "Object name is 'Range' - opens cooking interface"
+    action: CAMERA_STABILIZE
+    description: "Reset camera to ensure range is clickable"
+    delay_after_ms: 1500
+    notes: "CRITICAL: Camera stabilization prevents click failures"
 
   - id: 8
+    phase: "cooking"
+    action: INTERACT_OBJECT
+    args: "Cooking_range Cook"
+    description: "Click on Cooking range to open cooking interface"
+    delay_after_ms: 2000
+    notes: "Object name is 'Cooking_range' (underscore!) - opens cooking interface"
+
+  - id: 9
     phase: "cooking"
     action: KEY_PRESS
     args: "Space"
     description: "Press Space to start cooking all"
     notes: "Space confirms 'Cook All' in the interface"
 
-  - id: 9
+  - id: 10
     phase: "cooking"
     action: WAIT
-    await_condition: "no_item:Raw lobster"
+    await_condition: "no_item:${raw_food}"
     timeout_ms: 90000
     description: "Wait for cooking to complete"
     notes: |
-      Cooking 28 lobsters takes ~60-70 seconds.
+      Cooking 28 fish takes ~50-60 seconds.
       Level-up dialogues are auto-dismissed by LevelUpHandler.
 
   # ========== PHASE 4: NAVIGATE UP (TOP-FLOOR SKIPS MIDDLE) ==========
-  - id: 10
+  - id: 11
     phase: "navigate_up"
     action: GOTO
-    args: "3206 3208 0"
-    description: "Walk to southern staircase"
-    await_condition: "location:3206,3208"
+    args: "3207 3210 0"
+    description: "Walk toward southern staircase"
+    await_condition: "location:3207,3210"
     timeout_ms: 10000
-    notes: "GOTO before interacting with staircase"
+    notes: "Waypoint near staircase"
 
-  - id: 11
+  - id: 12
+    phase: "navigate_up"
+    action: CAMERA_STABILIZE
+    description: "Reset camera before staircase interaction"
+    delay_after_ms: 1500
+    notes: "Prevents staircase click failures"
+
+  - id: 13
     phase: "navigate_up"
     action: INTERACT_OBJECT
     args: "Staircase Top-floor"
@@ -144,7 +167,7 @@ steps:
     timeout_ms: 15000
     notes: "Top-floor skips the middle floor (plane 1) - much faster!"
 
-  - id: 12
+  - id: 14
     phase: "navigate_up"
     action: GOTO
     args: "3208 3220 2"
@@ -153,67 +176,72 @@ steps:
     timeout_ms: 10000
 
   # ========== PHASE 5: DEPOSIT AND REPEAT ==========
-  - id: 13
+  - id: 15
     phase: "deposit"
     action: BANK_OPEN
     description: "Open bank to deposit cooked food"
+    delay_after_ms: 1500
 
-  - id: 14
+  - id: 16
     phase: "deposit"
     action: BANK_DEPOSIT_ALL
     description: "Deposit all cooked fish and burnt fish"
-    notes: "Deposits Lobster, Burnt lobster, and any other items"
+    delay_after_ms: 1000
+    notes: "Deposits cooked fish, burnt fish, and any other items"
 
-  - id: 15
-    phase: "deposit"
-    action: BANK_CLOSE
-    description: "Close bank before next trip"
-
-  # Loop back to step 1 for next trip
+  # Loop back to step 1 for next trip (BANK_CLOSE happens at step 3)
 
 # Execution notes from ACTUAL TESTING
 notes: |
-  UPDATED: 2025-01-11
-  Successfully cooking Raw lobster at level 45
-  Burn rate at level 45: ~25%
+  UPDATED: 2026-01-17
+  Successfully tested with Raw tuna cooking
 
   KEY OPTIMIZATIONS:
 
-  1. BOTTOM-FLOOR / TOP-FLOOR:
+  1. CAMERA_STABILIZE:
+     - Added before cooking and before staircase interactions
+     - Prevents "Menu option not found" errors
+     - Critical for reliable automation!
+
+  2. BOTTOM-FLOOR / TOP-FLOOR:
      - Use "Bottom-floor" from plane 2 to skip directly to plane 0
      - Use "Top-floor" from plane 0 to skip directly to plane 2
      - Saves ~5 seconds per trip by skipping middle floor!
 
-  2. GOTO BEFORE INTERACT:
+  3. GOTO BEFORE INTERACT:
      - Always GOTO near an object before INTERACT_OBJECT
-     - Increases reliability of staircase interactions
+     - Increases reliability of staircase and range interactions
      - Prevents "object not found" errors
 
-  3. FULL INVENTORY (28):
-     - Use 28 slots instead of 27 for max efficiency
+  4. FULL INVENTORY (28):
+     - Use 28 slots for max efficiency
 
-  4. KEY_PRESS SPACE:
+  5. KEY_PRESS SPACE:
      - Use KEY_PRESS Space instead of clicking widgets
      - More reliable than CLICK_WIDGET for cooking interface
 
-  5. STAIRCASE ACTIONS:
+  6. STAIRCASE ACTIONS:
      From plane 2 (top): "Bottom-floor" -> plane 0
      From plane 0 (ground): "Top-floor" -> plane 2
      Middle floor (plane 1): Only "Climb-up" / "Climb-down" available
 
-  To change fish type:
-  - Step 2 args: "Raw shrimps 28"
-  - Step 9 await_condition: "no_item:Raw shrimps"
+  TO CHANGE FISH TYPE:
+  Just update the config section at the top:
+    raw_food: "Raw tuna"      # or "Raw swordfish", "Raw lobster"
+    cooked_food: "Tuna"       # or "Swordfish", "Lobster"
 
-  Expected results for lobster:
-  - XP per lobster: 120 (cooked) or 0 (burnt)
-  - Burn rate at level 45: ~25%
-  - Trip time: ~2 minutes with Bottom-floor/Top-floor optimization
+  Variables are automatically interpolated throughout the routine!
+
+  Expected results:
+  - Tuna: 100 XP each (cooked)
+  - Swordfish: 140 XP each (cooked)
+  - Lobster: 120 XP each (cooked)
+  - Trip time: ~2 minutes with all optimizations
 
 # Loop configuration
 loop:
   enabled: true
   repeat_from_step: 1
   stop_conditions:
-    - "no_item_in_bank:Raw lobster"
+    - "no_item_in_bank:${raw_food}"
     - "cooking_level:99"
