--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,11 @@ mcp>=1.0.0
 pyyaml>=6.0
 python-dotenv>=1.0.0
 watchdog>=3.0.0
+
+# Discord bot
+discord.py>=2.3.0
+
+# LLM providers (install what you need)
+google-generativeai>=0.3.0  # Gemini (default, cheapest)
+# anthropic>=0.18.0         # Claude (uncomment if needed)
+# openai>=1.0.0             # OpenAI (uncomment if needed)
